# smart_calculator

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf
.github/workflows/: dev.yml  rust.yml
src/: error.rs  main.rs  mount_order.rs  parse_expression.rs  valid_expression.rs
src/check_expression/: mod.rs  valid_expression.rs
src/evaluator/: evaluate.rs
src/parse_expression/: parsers.rs
src/structs/: expression.rs  mod.rs  req.rs
src/web/: entry_point.rs
tests/: quick_dev.rs
