[package]
name = "smart_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
axum = "0.7.5"
axum-server = "0.7.1"
colored = "2.1.0"
dotenv = "0.15.0"
httpc-test = "0.1.10"
meval = "0.2.0"
regex = "1.11.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
